--- a/slay.html
+++ b/slay.html
@@ -13,14 +13,13 @@
 <body>
     <div class="container">
         <h2>Does SB stand for 'Slay Besties'?</h2>
-        <img src="dog_fairy.gif" alt="glizzy">
+        <img src="dog_fairy.gif" alt="glizzy" align ="middle" > 
         <div class="btns">
             <button class="yes_btn">Yes</button>
             <button class="no_btn">No</button>
         </div>
      
     </div>
-
 
 </body>
 </html>
