--- a/slay.html
+++ b/slay.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h2>Does SB stand for 'Slay Besties'?</h2>
-        <img src="dog_fairy.gif" alt="glizzy" align ="middle" > 
+        <img src="dog_fairy.gif" alt="glizzy" > 
         <div class="btns">
             <button class="yes_btn">Yes</button>
             <button class="no_btn">No</button>
